# chiaki-ng

./: .gitignore  CMakeLists.txt  build_osx_x86.sh  build_ubuntu.sh  set_env.ps1  setup.ps1  test.ps1  test.py  vcpkg.json
cli/src/: discover.c
gui/src/: streamsession.cpp
pybind/: CMakeLists.txt
pybind/include/: chiaki-pybind.h  controllermanager.h  exception.h  py_elapsed_timer.h  py_host.h  py_settings.h  py_streamsession.h  sessionlog.h  settings.h  streamsession.h  timer.h
pybind/src/: bindings.cpp  controllermanager.cpp  discover.c  main.cpp  py_sessionlog.cpp  py_settings.cpp  py_streamsession.cpp  py_wakeup.c  sessionlog.cpp  settings.cpp  streamsession.cpp  wakeup.c
